--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <section class="hero">
         <div class="container">
             <img src="./assets/images/Angel's Edit.jpg" alt="Profile Photo" class="profile-img">
-            <h1>John Doe</h1>
+            <h1>Angel Garcia</h1>
             <p>Full Stack Developer</p>
             <div class="social-links">
                 <a href="#"><i class="fab fa-github"></i></a>
